docs: synchronize project documentation and module references